--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1>Contcat</h1>    
-<img src="./4.1+Webpages/assets/images/cat.png"  alt="cat"/>
+<img src="cat.png"  alt="cat"/>
 <h2>Summary</h2>
 <p>coder cat and very hardworking </p>
 <h2>Education</h2>
